# libkkv

./: .gitignore  CMakeLists.txt  README.md  build_example_test.sh  overview.md
example/test/: test.cc  test.h  test_db.cc  test_slice.cc
include/kkv/: api.h  db.h  logger.h  options.h  slice.h  status.h
src/: options.cc
src/common/: types.h
src/core/: configuration.cc  configuration.h  core.cc  core.h  streamer.cc  streamer.h
src/infrastructure/: hashtable.cc  hashtable.h  pair.cc  pair.h
src/utility/: filesystem.cc  filesystem.h  utils.cc  utils.h
